[project]
name = "gateway-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "certifi==2025.8.3",
    "click==8.2.1",
    "fastapi==0.104.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.25.2",
    "idna==3.10",
    "pydantic==2.5.0",
    "pydantic-core==2.14.1",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "sniffio==1.3.1",
    "starlette==0.27.0",
    "typing-extensions==4.14.1",
    "uvicorn==0.24.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]
